Fix recipe cards not showing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,5 +44,5 @@ img.card-img-top{
 }
 
 .hidden-card{
-    display: none
+    /* display: none */
 }
